crates/monochange_integration_tests/tests/snapshots/group_release_note_fallback__changelog__group-empty-one-member-note__app.snap
---
source: crates/monochange_integration_tests/tests/group_release_note_fallback.rs
expression: normalize_commit_links(&contents)
---
# Changelog

## [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) (2026-04-06)

### Changed

- No package-specific changes were recorded; `workflow-app` was updated to 1.1.0 as part of group `sdk`.
