crates/monochange_integration_tests/tests/snapshots/group_release_note_fallback__changelog__group-empty-one-member-note__core.snap
---
source: crates/monochange_integration_tests/tests/group_release_note_fallback.rs
expression: normalize_commit_links(&contents)
---
# Changelog

## [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) (2026-04-06)

### Features

- **Add core feature.** Adds a visible core feature that should appear only in the member fallback.
  _Owner:_ test · _Introduced in:_ [97e2abf](https://github.com/ifiokjr/monochange/commit/97e2abf3d32b8150f4ab1d6be807af05f4d9598a)
