crates/monochange_integration_tests/tests/snapshots/group_release_note_fallback__changelog__group-empty-one-member-note__group.snap
---
source: crates/monochange_integration_tests/tests/group_release_note_fallback.rs
expression: normalize_commit_links(&contents)
---
# Changelog

## [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) (2026-04-06)

Grouped release for `sdk`.

### Changed

- **No group-facing notes were recorded for this release.** Member packages were updated as part of the synchronized group `sdk` version, but their changes are not configured for inclusion in this changelog.
